crates/ra_ide_api/src/completion/snapshots/completion_item__inserts_parens_for_function_calls2.snap
---
created: "2019-05-23T22:44:10.916806744Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "main",
        source_range: [72; 77),
        delete: [72; 77),
        insert: "main()$0",
        kind: Function,
        detail: "fn main()",
    },
    CompletionItem {
        label: "with_args",
        source_range: [72; 77),
        delete: [72; 77),
        insert: "with_args($0)",
        kind: Function,
        detail: "fn with_args(x: i32, y: String)",
    },
]
