crates/ra_ide_api/src/completion/snapshots/completion_item__inserts_parens_for_function_calls3.snap
---
created: "2019-05-23T22:44:40.543731193Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "foo",
        source_range: [139; 140),
        delete: [139; 140),
        insert: "foo()$0",
        kind: Method,
        detail: "fn foo(&self)",
    },
]
