crates/ra_ide_api/src/completion/snapshots/completion_item__keywords_in_function1.snap
---
created: "2019-05-23T22:23:35.075690846Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "if",
        source_range: [41; 41),
        delete: [41; 41),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [41; 41),
        delete: [41; 41),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [41; 41),
        delete: [41; 41),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [41; 41),
        delete: [41; 41),
        insert: "return;",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [41; 41),
        delete: [41; 41),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
