crates/ra_ide_api/src/completion/snapshots/completion_item__keywords_in_function2.snap
---
created: "2019-05-23T22:23:35.068799431Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "else",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "else {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "else if",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "else if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "if",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "return;",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [92; 92),
        delete: [92; 92),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
