crates/ra_ide_api/src/completion/snapshots/completion_item__keywords_in_function3.snap
---
created: "2019-05-23T22:23:35.085655258Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "if",
        source_range: [48; 48),
        delete: [48; 48),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [48; 48),
        delete: [48; 48),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [48; 48),
        delete: [48; 48),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [48; 48),
        delete: [48; 48),
        insert: "return $0;",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [48; 48),
        delete: [48; 48),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
