crates/ra_ide_api/src/completion/snapshots/completion_item__keywords_in_use_stmt1.snap
---
created: "2019-05-23T22:23:35.066687241Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "crate",
        source_range: [17; 17),
        delete: [17; 17),
        insert: "crate::",
        kind: Keyword,
    },
    CompletionItem {
        label: "self",
        source_range: [17; 17),
        delete: [17; 17),
        insert: "self",
        kind: Keyword,
    },
    CompletionItem {
        label: "super",
        source_range: [17; 17),
        delete: [17; 17),
        insert: "super::",
        kind: Keyword,
    },
]
