crates/ra_ide_api/src/completion/snapshots/completion_item__keywords_in_use_stmt2.snap
---
created: "2019-05-23T22:44:10.859494330Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "self",
        source_range: [20; 20),
        delete: [20; 20),
        insert: "self",
        kind: Keyword,
    },
    CompletionItem {
        label: "super",
        source_range: [20; 20),
        delete: [20; 20),
        insert: "super::",
        kind: Keyword,
    },
]
