crates/ra_ide_api/src/completion/snapshots/completion_item__last_return_in_block_has_semi2.snap
---
created: "2019-05-23T22:44:10.871868390Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "if",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "return $0;",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
