crates/ra_ide_api/src/completion/snapshots/completion_item__method_attr_filtering.snap
---
created: "2019-02-18T09:22:23.941335305Z"
creator: insta@0.6.2
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "the_method",
        source_range: [249; 249),
        delete: [249; 249),
        insert: "the_method()$0",
        kind: Method,
        detail: "fn the_method(&self)"
    }
]
